--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -25,6 +25,11 @@
             android:icon="@drawable/ic_person_login"
             android:title="Logout" />
 
+        <item
+            android:id="@+id/nav_booking"
+            android:icon="@drawable/ic_booking"
+            android:title="Booking Details" />
+
 <!--        <item-->
 <!--            android:id="@+id/nav_cycle"-->
 <!--            android:icon="@drawable/caricon"-->
