--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:text="LOGIN"
-
         android:textColor="#fff"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -83,22 +82,25 @@
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <Button
+        android:textAllCaps="false"
+        android:textStyle="bold"
         android:id="@+id/loginbtn"
         android:layout_width="150dp"
         android:layout_height="46dp"
         android:layout_marginTop="34dp"
         android:background="#90C208"
         android:scaleType="fitXY"
-        android:text="LOGIN"
+        android:text="Login"
         android:onClick="onClickSignInBtn"
         android:textColor="#fff"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordcontainer" />
 
     <TextView
+        android:onClick="forgetPasswordClick"
         android:id="@+id/forgotpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
