--- a/app/src/main/res/layout/activity_resetpassword.xml
+++ b/app/src/main/res/layout/activity_resetpassword.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroung"
-    tools:context=".Login">
-
+    tools:context=".Resetpassword">
     <TextView
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:text="LOGIN"
-
+        android:text="Reset Password"
         android:textColor="#fff"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -27,17 +24,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="E-MAIL ID/MOBILE NO.*"
+        android:text="MOBILE NO.*"
         android:textColor="#fff"
         android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
-    <EditText
-
+    <TextView
         android:id="@+id/emailcontainer"
         android:layout_width="334dp"
         android:layout_height="30dp"
@@ -46,22 +42,24 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/shapewhitebackground"
         android:paddingLeft="9dp"
+        android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         android:hint="Enter your email or phone"
         app:layout_constraintTop_toBottomOf="@+id/email" />
+
     <TextView
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="PASSWORD*"
+        android:layout_marginTop="24dp"
+        android:text="Enter otp sent on your mobile no*"
         android:textColor="#fff"
         android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
+        app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailcontainer" />
 
@@ -76,54 +74,26 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/shapewhitebackground"
         android:paddingLeft="9dp"
+        android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        android:hint="Enter your password"
+        android:hint="Enter otp "
         app:layout_constraintTop_toBottomOf="@+id/password" />
-
-    <Button
+      <Button
         android:id="@+id/loginbtn"
         android:layout_width="150dp"
         android:layout_height="46dp"
         android:layout_marginTop="34dp"
         android:background="#90C208"
         android:scaleType="fitXY"
-        android:text="LOGIN"
-        android:onClick="onClickSignInBtn"
+        android:text="VERIFY"
+        android:onClick="forgetPasswordClick"
         android:textColor="#fff"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordcontainer" />
-
-    <TextView
-        android:id="@+id/forgotpassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Forgot Password?"
-        android:onClick="forgetPasswordClick"
-        android:textColor="#fff"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />
-
-    <TextView
-        android:id="@+id/register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="New User Registration"
-        android:onClick="SignUpPageClick"
-        android:textColor="#fff"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotpassword" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
