--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -35,6 +35,7 @@
 
 
         <TextView
+            android:textAlignment="center"
             android:textColor="#fff"
             android:layout_marginTop="0dp"
             android:padding="10dp"
@@ -55,6 +56,7 @@
 
 
         <TextView
+            android:textAlignment="center"
             android:textColor="#fff"
             android:layout_marginTop="0dp"
             android:padding="10dp"
